# mri-adaptivity-paper

./: .gitmodules  LICENSE  README.md  accumerror_brusselator_results.txt  accumerror_kpr_results.txt  brusselator_full_results.xlsx  brusselator_mriadapt_results.xlsx  build-all.sh  kpr_adapt_comparison_results.pkl  kpr_full_results.xlsx  kpr_mriadapt_results.xlsx  kpr_nested_results.xlsx  make-all-plots.sh  makeplots.py  plot.ipynb  plot_accumerror.py  plot_adaptivity_comparison.py  plot_mriadapt.py  plot_mriadapt_extras.py  plot_slowerror.py  plot_utilities_extras.py  plot_utilities_paper.py  python_requirements.txt  rank_stats.xlsx  run-all-statsTests.sh  run-all-tests.sh  runStats_allCtrls.py  runStats_fixedCtrl_Indep_tests.py  runStats_fixedMethod_Indep_tests.py  runStats_fixedMethod_tests.py  runStats_hTol_dec_ctrl.py  runStats_oneWayANOVA_ctrl.py  runStats_repeatedM_ANOVA.py  run_accumerror_tests.py  run_adaptivity_comparison.py  run_allCtrls.py  run_hTol_dec_ctrl.py  run_mriadapt_tests.py  run_nested_kpr_tests.py  run_slowerror_tests.py  (+4 more)
src-mrihh/: CMakeLists.txt  ark_test_kpr_mriadapt_hh.cpp
src-mrihh-logging/: CMakeLists.txt
src-v7.3.0/: CMakeLists.txt  ark_kpr_nestedmri.cpp  ark_test_accumerror_brusselator.cpp  ark_test_accumerror_kpr.cpp  ark_test_kpr_mriadapt.cpp
src-v7.3.0-logging/: CMakeLists.txt  ark_test_brusselator_mriadapt.cpp
src-v7.5.0/: CMakeLists.txt  ark_kpr_nestedmri.cpp
src-v7.5.0-logging/: CMakeLists.txt  ark_kpr_nestedmri.cpp  ark_test_kpr_mriadapt.cpp
statistical_analysis/: run-all-statsTests.sh  runStats_allCtrls.py  runStats_fixedCtrl_tests.py  runStats_hTol_dec_ctrl.py  run_fixedCtrl_Indep_tests.py  run_fixedCtrl_tests.py  run_fixedMethod_Indep_tests.py  run_fixedMethod_tests.py  run_oneWayANOVA_ctrl.py  run_repreatedM_ANOVA.py
statistical_analysis/fixedCtrl_methods/: run-all-methods.sh  run_allBruss_fastOrd2.py  run_allBruss_fastOrd3.py  run_allBruss_fastOrd45.py  run_allBruss_slowOrd2.py  run_allBruss_slowOrd3.py  run_allBruss_slowOrd45.py  run_allKPR_fastOrd2.py  run_allKPR_fastOrd3.py  run_allKPR_fastOrd45.py  run_allKPR_slowOrd2.py  run_allKPR_slowOrd3.py  run_allKPR_slowOrd45.py  ~$allBruss_fastOrder2.xlsx
statistical_analysis/fixedMethod_Ctrl/: run-all-controllers.sh  run_ctrlBruss_Ord2.py  run_ctrlBruss_Ord3.py  run_ctrlBruss_Ord45.py  run_ctrlKPR_Ord2.py  run_ctrlKPR_Ord3.py  run_ctrlKPR_Ord45.py
statistical_analysis/scheme1/: run-all-scheme1.sh  run_ANOVA_all_methods.py  run_all_controllers.py  run_all_methods.py  run_oneWayANOVA_ctrl.py
statistical_analysis/scheme2/fixedCtrl_methods/: run-all-methods.sh  run_allBruss_fastOrd2.py  run_allBruss_fastOrd3.py  run_allBruss_fastOrd45.py  run_allBruss_slowOrd2.py  run_allBruss_slowOrd3.py  run_allBruss_slowOrd45.py  run_allKPR_fastOrd2.py  run_allKPR_fastOrd3.py  run_allKPR_fastOrd45.py  run_allKPR_slowOrd2.py  run_allKPR_slowOrd3.py  run_allKPR_slowOrd45.py
statistical_analysis/scheme2/fixedMethod_Ctrl/: rank_stats.xlsx  run-all-controllers.sh  run_all_Ord2.py  run_all_Ord3.py  run_all_Ord45.py
